--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
 
-    
+
     <link rel="stylesheet" href="css/style.css">
     <title>m.m.tour</title>
 </head>
@@ -28,19 +28,21 @@
 <body>
 
     <div class="wrapper">
-        
+
         <div class="whatsapp-btn">
 
         </div>
 
         <div class="banner">
-            <div class="container">
-                <div class="banner-block">
+            <div class="banner-block">
+                <div class="container">
                     <div class="banner__header">
-                        <img src="" alt="">
-                        <div class="banner__contact">
-                            <a href=""><img src="" alt=""></a>
-                            <a href="">+7 (776) 171 20-03</a>
+                        <div class="banner__top">
+                            <a href="" class="logo"><img src="src/img/logo.svg" alt="logo"></a>
+                            <div class="banner__contact">
+                                <a href="" class="banner-inst"><img src="src/img/insta.svg" alt="instagram"></a>
+                                <a href="" class="banner-tel">+7 (776) 171 20-03</a>
+                            </div>
                         </div>
 
                         <h1 class="banner__title">
@@ -53,7 +55,7 @@
                     </div>
                 </div>
             </div>
-            <img class="banner-img"/>
+            <img class="banner__img" src="src/img/banner-img.svg" alt="banner-img" />
         </div>
     </div>
 
