--- a/index.html
+++ b/index.html
@@ -57,6 +57,68 @@
             </div>
             <img class="banner__img" src="src/img/banner-img.svg" alt="banner-img" />
         </div>
+
+
+        <div class="about-us">
+            <div class="container">
+                <h3 class="about-us-title h3-title">
+                    О турагенстве
+                </h3>
+                <h4 class="about-us-subtitle h4-title">
+                    <span>M.M. TOUR</span> - ЭТО
+                </h4>
+                <div class="about-us-list">
+                    <div class="list-item">
+                        <img src="src/img/itemlist1.svg" alt="itemlist" class="item-logo">
+                        <p>Гиды с опытом 5+ лет</p>
+                    </div>
+                    <div class="list-item">
+                        <img src="src/img/itemlist2.svg" alt="itemlist" class="item-logo">
+                        <p>Завораживающие дух
+                            локации</p>
+                    </div>
+                    <div class="list-item">
+                        <img src="src/img/itemlist3.svg" alt="itemlist" class="item-logo">
+                        <p>Комфортабельный
+                            транспорт</p>
+                    </div>
+                    <div class="list-item">
+                        <img src="src/img/itemlist4.svg" alt="itemlist" class="item-logo">
+                        <p>Интерактивная
+                            программа</p>
+                    </div>
+                    <div class="list-item">
+                        <img src="src/img/itemlist5.svg" alt="itemlist" class="item-logo">
+                        <p>Экслюзивный партнёр
+                            зон отдыха и отелей</p>
+                    </div>
+                </div>
+                <div class="text-center"><a href="" role="button" class="about-us-btn btn-order">Забронировать место</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="turs">
+            <div class="container">
+                <div class="turs-title h3-title">
+                    Туры
+                </div>
+                <div class="turs-holder">
+                    <div class="turs-item turs-item-1">
+                        <span>КОЛЬСАЙ</span>
+                    </div>
+                    <div class="turs-item turs-item-2"><span>КАЙЫНДЫ</span></div>
+                    <div class="turs-item turs-item-3"><span>ЧАРЫН</span></div>
+                    <div class="turs-item turs-item-4"><span>ПЛАТО АССЫ</span></div>
+                    <div class="turs-item turs-item-5"><span>МЕДВЕЖИЙ ВОДОПАД</span></div>
+                    <div class="turs-item turs-item-6"><span>АЛМАТИНСКИЙ ЗАПОВЕДНИК</span></div>
+                    <div class="turs-item turs-item-7"><span>ЧЕНЫЙ КАНЬОН</span></div>
+                    <div class="turs-item turs-item-8"><span>ЛУННЫЙ КАНЬОН</span></div>
+                    <div class="turs-item turs-item-9"><span>ТУРКЕСТАН</span></div>
+                    <div class="turs-item turs-item-10"><span>АЛАКОЛЬ</span></div>
+                </div>
+            </div>
+        </div>
     </div>
 
 </body>
