--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Montserrat:ital,wght@0,400;0,600;0,700;0,800;0,900;1,400;1,600;1,700;1,800;1,900&family=Nunito+Sans:wght@400;600;700;900&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&display=swap"
         rel="stylesheet">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -117,7 +116,208 @@
                     <div class="turs-item turs-item-9"><span>ТУРКЕСТАН</span></div>
                     <div class="turs-item turs-item-10"><span>АЛАКОЛЬ</span></div>
                 </div>
+
+                <div class="text-center">
+                    <a href="" role="button" class="turs-btn btn-order">Забронировать место</a>
+                </div>
             </div>
+        </div>
+
+        <div class="result">
+            <div class="container">
+                <div class="result-card">
+                    <h3 class="result__title h3-title">ЧТО ТЫ ПОЛУЧИШЬ?</h3>
+
+                    <div class="result-list">
+                        <div class="result-item">
+                            <div class="res-img"><img src="src/img/bus.png" alt="bus"></div>
+                            <div class="result-desc">
+                                <div class="resitem-title">
+                                    Комфортный рансфер
+                                </div>
+                                <p>
+                                    Туда-обратно
+                                </p>
+                            </div>
+                        </div>
+                        <div class="result-item">
+                            <div class="res-img"><img src="src/img/woman.png" alt="woman"></div>
+                            <div class="result-desc">
+                                <div class="resitem-title">
+                                    Профессиональные гиды
+                                </div>
+                                <p>
+                                    Расскажут тебе всё о природе, ответят на все интересующие вопросы
+                                </p>
+                            </div>
+                        </div>
+                        <div class="result-item">
+                            <div class="res-img"><img src="src/img/starface.png" alt="starface" /></div>
+                            <div class="result-desc">
+                                <div class="resitem-title">
+                                    Незабываемый трип
+                                </div>
+                                <p>
+                                    Специально для тебя разработали инетерсную развлекательную программу
+                                </p>
+                            </div>
+                        </div>
+                        <div class="result-item">
+                            <div class="res-img"><img src="src/img/tree.png" alt="tree"></div>
+                            <div class="result-desc">
+                                <div class="resitem-title">
+                                    Полюбишь природу ещё сильнее
+                                </div>
+                                <p>
+                                    Покажем тебе природу с другой стороны
+                                </p>
+                            </div>
+                        </div>
+                        <div class="result-item">
+                            <div class="res-img">
+                                <img src="src/img/pairmen.png" alt="pairmen">
+                            </div>
+                            <div class="result-desc">
+                                <div class="resitem-title">
+                                    50+ новых знакомств
+                                </div>
+                                <p>
+                                    Ты заведёшь много новых верных друзей
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="text-center">
+                        <a class="result-btn btn-order" role="button">
+                            Забронировать место
+                        </a>
+                    </div>
+                </div>
+
+
+
+                <div class="res-doc">
+                    <div class="res-doc-title h3-title">
+                        ☝🏼 Что взять с собой?
+                    </div>
+
+                    <div class="res-doc-list">
+                        <div class="res-doc-item">
+                            <div class="res-doc-number">
+                                №1
+                            </div>
+                            <div class="res-doc-desc">
+                                Документы 📑<br>
+                                <span>Удостоверение личности | паспорт</span>
+                            </div>
+                        </div>
+                        <div class="res-doc-item">
+                            <div class="res-doc-number">
+                                №2
+                            </div>
+                            <div class="res-doc-desc">
+                                Заряженное настроение 😜
+                            </div>
+                        </div>
+                        <div class="res-doc-item">
+                            <div class="res-doc-number">
+                                №3
+                            </div>
+                            <div class="res-doc-desc">
+                                Сменную одежду, тёплую одежду 🥾 🧦 🧤 🧣
+                            </div>
+                        </div>
+                        <div class="res-doc-item">
+                            <div class="res-doc-number">
+                                №4
+                            </div>
+                            <div class="res-doc-desc">
+                                Перекус в дорогу и для пикников 🥪
+                            </div>
+                        </div>
+                        <div class="res-doc-item">
+                            <div class="res-doc-number">
+                                №5
+                            </div>
+                            <div class="res-doc-desc">
+                                Термос с горячим чаем (если есть) ☕
+                            </div>
+                        </div>
+                        <div class="res-doc-item">
+                            <div class="res-doc-number">
+                                №6
+                            </div>
+                            <div class="res-doc-desc">
+                                Солнцезащитный крем
+                            </div>
+                        </div>
+                        <div class="res-doc-item">
+                            <div class="res-doc-number">
+                                №7
+                            </div>
+                            <div class="res-doc-desc">
+                                Наличный запас
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="text-center">
+                        <a href="" role="button" class="res-doc-btn btn-order">
+                            Забронировать место
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <img src="src/img/whatreceive.png" alt="result">
+        </div>
+
+        <div class="footer">
+            <div class="container">
+                <h3 class="footer-title h3-title">
+                    Остались вопросы?
+                </h3>
+                <h4 class="footer-subtitle">
+                    Заполни форму и мы с тобой свяжемся
+                </h4>
+
+
+                <form method="post" id="emailForm" class="form-container text-center">
+                    <div class="form-group">
+                        <input class="input-t w100p" type="text" id="fname" name="fname" placeholder="Имя" required>
+                        <div class="bt-line"></div>
+                    </div>
+                    <div class="form-group">
+                        <input class="input-t w100p" type="tel" id="pNumber" name="fphone" placeholder="Номeр телефона"
+                            oninput="this.value = this.value.replace(/[^0-9.]/g, '-').replace(/(\..*)\./g, '$1');"
+                            required>
+                        <div class="bt-line"></div>
+                    </div>
+                    <div class="form-group mb-50">
+                        <label class="contai">Я согласен на сбор и обработку персональных данных
+                            <input type="checkbox" id="fCheck" required>
+                            <span class="checkmark"></span>
+                        </label>
+                    </div>
+
+                    <button class="form-button btn-order" type="submit" type="submit">Отправить</button>
+                </form>
+
+                <div class="footer-socials">
+                    <a href="" class="tel">
+                        +7 (776) 171 20-03
+                    </a>
+                    <p class="brand">m.m.tour</p>
+                    <p class="email-name">info@m.m.tour.kz</p>
+
+
+                    <p class="copyright">Copyright 2022© M.M. TOUR, All rights reserved</p>
+
+                    <img src="src/img/logo-bottom.svg" alt="logo">
+                </div>
+            </div>
+
+            <img src="src/img/mountain.png" alt="mountain">
         </div>
     </div>
 
