--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
     <div class="wrapper">
 
-        <div class="whatsapp-btn">
-
+        <div class="pulse">
+            <a href="https://api.whatsapp.com/send?phone=+77761712003"><img src="src/img/wp.svg" alt="wp"></a>
         </div>
 
         <div class="banner">
