--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                 <div class="container">
                     <div class="banner__header">
                         <div class="banner__top">
-                            <a href="" class="logo"><img src="src/img/logo.svg" alt="logo"></a>
+                            <a href="#" class="logo"><img src="src/img/logo.svg" alt="logo"></a>
                             <div class="banner__contact">
                                 <a href="" class="banner-inst"><img src="src/img/insta.svg" alt="instagram"></a>
-                                <a href="" class="banner-tel">+7 (776) 171 20-03</a>
+                                <a href="tel:+77761712003" class="banner-tel">+7 (776) 171 20-03</a>
                             </div>
                         </div>
 
@@ -50,7 +50,7 @@
 
                         <h2 class="banner__subtitle">-25% скидка для компаний от 3 человек</h2>
 
-                        <a href="" class="banner-btn btn-order" role="button">Забронировать место</a>
+                        <a href="#emailForm" class="banner-btn btn-order" role="button">Забронировать место</a>
                     </div>
                 </div>
             </div>
@@ -92,7 +92,8 @@
                             зон отдыха и отелей</p>
                     </div>
                 </div>
-                <div class="text-center"><a href="" role="button" class="about-us-btn btn-order">Забронировать место</a>
+                <div class="text-center"><a href="#emailForm" role="button" class="about-us-btn btn-order">Забронировать
+                        место</a>
                 </div>
             </div>
         </div>
@@ -118,7 +119,7 @@
                 </div>
 
                 <div class="text-center">
-                    <a href="" role="button" class="turs-btn btn-order">Забронировать место</a>
+                    <a href="#emailForm" role="button" class="turs-btn btn-order">Забронировать место</a>
                 </div>
             </div>
         </div>
@@ -189,7 +190,7 @@
                     </div>
 
                     <div class="text-center">
-                        <a class="result-btn btn-order" role="button">
+                        <a href="#emailForm" class="result-btn btn-order" role="button">
                             Забронировать место
                         </a>
                     </div>
@@ -263,7 +264,7 @@
                     </div>
 
                     <div class="text-center">
-                        <a href="" role="button" class="res-doc-btn btn-order">
+                        <a href="#emailForm" role="button" class="res-doc-btn btn-order">
                             Забронировать место
                         </a>
                     </div>
@@ -282,13 +283,13 @@
                 </h4>
 
 
-                <form method="post" id="emailForm" class="form-container text-center">
+                <form method="post" id="emailForm" class="form-container text-center" name="google-sheet">
                     <div class="form-group">
-                        <input class="input-t w100p" type="text" id="fname" name="fname" placeholder="Имя" required>
+                        <input class="input-t w100p" type="text" id="fname" name="Name" placeholder="Имя" required>
                         <div class="bt-line"></div>
                     </div>
                     <div class="form-group">
-                        <input class="input-t w100p" type="tel" id="pNumber" name="fphone" placeholder="Номeр телефона"
+                        <input class="input-t w100p" type="tel" id="pNumber" name="Telephone" placeholder="Номeр телефона"
                             oninput="this.value = this.value.replace(/[^0-9.]/g, '-').replace(/(\..*)\./g, '$1');"
                             required>
                         <div class="bt-line"></div>
@@ -304,7 +305,7 @@
                 </form>
 
                 <div class="footer-socials">
-                    <a href="" class="tel">
+                    <a href="tel+77761712003" class="tel">
                         +7 (776) 171 20-03
                     </a>
                     <p class="brand">m.m.tour</p>
@@ -320,6 +321,19 @@
             <img src="src/img/mountain.png" alt="mountain">
         </div>
     </div>
+
+    <script>
+        const scriptURL = "https://script.google.com/macros/s/AKfycbxz3KNdRvlYR9ukIGs1e28dKksG1l_N3R9WjSTx53cBgIQtKFzItsr8pkEYW1cyOvXU/exec"
+
+        const form = document.forms['google-sheet']
+
+        form.addEventListener('submit', e => {
+            e.preventDefault()
+            fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+                .then(response => alert("Thanks for Contacting us..! We Will Contact You Soon..."))
+                .catch(error => console.error('Error!', error.message))
+        })
+    </script>
 
 </body>
 
